# rust-grpc-server

./: Cargo.toml  README.md  build.rs  server.proto
src/: grpc_server.rs
src/core/service/: healthcheck_service.rs  mod.rs
src/resource/healthcheck/: healthcheck_controller.rs  mod.rs
