[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.11.0"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "healthcheck-grpc-server"
path = "src/grpc_server.rs"